template/assets/css/style.css
/* ... */
.wp-block-columns {
	margin-bottom: 1.2rem;
}

.post-content .has-medium-font-size {
	line-height: 1.6;
}

.post-content .has-large-font-size {
	line-height: 1.4;
}

input[type=checkbox],
input[type=radio] {
	display: inline-block;
	vertical-align: top;
}

.blocks-gallery-caption {
	margin-bottom: 2rem;
}

.wp-caption-text,
.wp-block-image figcaption,
.wp-block-video figcaption,
.wp-block-embed figcaption {
	padding: 10px;
}

select,
.custom-select {
	background-color: transparent;
	border: 1px solid #999;
	border-radius: 6px;
	-webkit-box-shadow: none;
	box-shadow: none;
	color: #000;
	line-height: 1;
	height: 48px;
	padding: 0 20px;
	position: relative;
	width: 100%;
	-webkit-appearance: none;
	-moz-appearance: none;
	appearance: none;
	font-size: 16px;
}

select,
.custom-select {
	background: url(../images/caret-down.svg) no-repeat right 20px center/12px 12px;
}

.wp-caption-text,
.wp-block-image figcaption,
.wp-block-video figcaption,
.wp-block-embed figcaption {
	max-width: 100%;
	margin: 0;
	padding: 10px 10px 0 10px;
	text-align: center;
	font-size: 14px;
	font-style: italic;
	opacity: 0.75;
}

.wp-block-button {
	margin-bottom: 30px;
}

.post-content .gallery {
	margin: 0 -15px;
	font-size: 0;
}

.post-content .gallery .gallery-item {
	padding: 15px;
	display: inline-block;
	vertical-align: top;
	width: 33.333%;
	text-align: center;
}

.post-content .gallery.gallery-columns-1 .gallery-item {
	width: 100%;
}

.post-content .gallery.gallery-columns-2 .gallery-item {
	width: 50%;
}

.post-content .gallery.gallery-columns-3 .gallery-item {
	width: 33.333%;
}

.post-content .gallery.gallery-columns-4 .gallery-item {
	width: 25%;
}

.post-content .gallery.gallery-columns-5 .gallery-item {
	width: 20%;
}

.gallery-item .wp-caption-text.gallery-caption {
	padding-top: 10px;
	font-size: 0.875rem;
}

hr {
	border-top: 1px solid #8d99a7;
}

.wp-block-button {
	margin-bottom: 1.2rem;
	line-height: normal;
}

.wp-block-button__link {
	-webkit-box-shadow: none;
	box-shadow: none;
	display: inline-block;
	margin: 0;
	text-align: center;
	text-decoration: none;
	overflow-wrap: break-word;
	background-color: #29a587;
	border: 1px solid #29a587;
	border-radius: 28px;
	color: #fff;
	cursor: pointer;
	font-size: .87rem;
	font-weight: 600;
	letter-spacing: .1rem;
	line-height: 1.6;
	overflow: hidden;
	padding: .8rem 2rem;
	position: relative;
	text-transform: uppercase;
	z-index: 1;
}

.is-style-squared .wp-block-button__link {
	border-radius: 0;
}

.is-style-outline .wp-block-button__link {
	background-color: transparent;
	color: #29a587;
	border: 1px solid #29a587;
}

.post-content .wp-block-archives {
	margin: 2rem 0;
}

.wp-block-latest-posts.wp-block-latest-posts__list {
	padding-left: 0;
}

.wp-block-search {
	margin-bottom: 1.9rem;
	position: relative;
	max-width: 300px;
}


/* - Alignment */

.align-center {
	text-align: center !important;
}

.align-right {
	text-align: right !important;
}

.align-left {
	text-align: left !important;
}

.pull-right {
	float: right !important;
}

.pull-left {
	float: left !important;
}

.pull-none {
	float: none !important;
}

.alignright {
	margin-left: 30px!important;
	margin-bottom: 30px!important;
	float: right;
	max-width: 50%;
}

.alignleft {
	margin-right: 30px!important;
	margin-bottom: 30px!important;
	float: left;
	max-width: 50%;
}

.aligncenter {
	margin-left: auto!important;
	margin-right: auto!important;
	display: block;
}

.full-width {
	max-width: 100%;
	width: 100%;
}

.full-max-width {
	max-width: 100%;
	width: auto;
}

.centrize {
	display: table;
	table-layout: fixed;
	height: 100%;
	position: relative;
	top: 0;
	left: 0;
	z-index: 2;
}

.vertical-center {
	display: table-cell;
	vertical-align: middle;
}

.text-uppercase {
	text-transform: uppercase !important;
}

.text-lowercase {
	text-transform: lowercase !important;
}

.text-capitalize {
	text-transform: capitalize !important;
}

.text-regular {
	font-weight: 400 !important;
}

.text-bold {
	font-weight: 700 !important;
}

.text-italic {
	font-style: italic !important;
}

.alert-success {
	background-color: white;
	color: #29a587;
	text-align: center;
	font-size: 18px;
	border: 2px solid #000;
	border-radius: 30px;
	margin-top: 15em;
}


/* - Wrapper */

.container-page {
	position: relative;
	overflow: hidden;
	min-height: 50vh;
}

.wrapper, .container {
	position: relative;
}

.container {
	max-width: 1300px;
}

.lui-section {
	padding-bottom: 220px;
}

.disabled {
	display: none;
}

.v-line-block {
	position: absolute;
	left: -100px;
	top: -70px;
	bottom: -30px;
	width: 2px;
	background: #000;
	z-index: 3;
	pointer-events: none;
}

.v-line-left .v-line-block {
	left: -100px;
	right: auto;
}

.v-line-right .v-line-block {
	left: auto;
	right: -100px;
}

.hero-started .v-line-block {
	bottom: -70px;
}

.v-line-block span {
	position: absolute;
	bottom: -188px;
	left: -168px;
	width: 226px;
	height: 226px;
	background-image: url(../images/pat-1.png);
	background-repeat: no-repeat;
	background-size: contain;
	display: block;
}

.v-line-right .v-line-block span {
	left: auto;
	right: -168px;
}

.v-line-block:before {
	content: '';
	position: absolute;
	left: -15px;
	top: -15px;
	width: 30px;
	height: 30px;
	background: #fff;
	border: 2px solid #000;
	border-radius: 30px;
	box-shadow: 5px 5px rgb(0 0 0 / 20%);
	z-index: 1;
}

.v-line-block:after {
	content: '';
	position: absolute;
	left: -15px;
	bottom: -15px;
	width: 30px;
	height: 30px;
	background: #fff;
	border: 2px solid #000;
	border-radius: 30px;
	box-shadow: 5px 5px rgb(0 0 0 / 20%);
	z-index: 1;
}

.v-line-top .v-line-block span {
	bottom: auto;
	top: -188px;
}

.portfolio-template .wrapper .v-line-block {
	top: 0;
	bottom: -600px;
}


/* - Breadcrumbs */

.breadcrumbs {
	position: relative;
	margin-top: 0;
	margin-bottom: 40px;
	font-size: 0;
	float: left;
	z-index: 2;
}
/* ... */

